added sort on experience filed

--- a/templates/commons/library.html
+++ b/templates/commons/library.html
@@ -72,7 +72,7 @@
             <div class="row mt-3" style="background-color: white; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1);">
                 <div class="d-flex pt-2 pb-1 align-items-center">
                     <div class="col-2 text-center text-truncate text-style-ro-18b">{{ student.study }}</div>
-                    <div class="col-3 text-center text-style-ro-18b pe-4">{{ student.role_in_the_team }}</div>
+                    <div class="col-3 text-center text-style-ro-18b pe-4">{{ student.specialisation }}</div>
                     <div class="col-2 text-center text-style-ro-18b">{{ student.country }}</div>
                     <div class="col-1 text-center text-style-ro-18b" style="color: #FD612C;">{{ student.age }}</div>
                     <div class="col-2 text-center text-style-ro-18b pe-4" style="color: #FD612C;">
