--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load custom_filters %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -53,6 +52,11 @@
                 {% if request.user.is_authenticated %}
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav d-flex" style="width: 100%;">
+                        <li class="nav-item">
+                            <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="shopping-cart-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="YOUR CART" data-popover-content="#popover-cart" data-html="true" data-bs-custom-class="custom-cart-popover">
+{#                                <i class="fa-solid fa-cart-shopping" style="font-size: 1.5vw; color: white;"></i>#}
+                            </a>
+                        </li>
                         <li class="nav-item ms-sm-auto">
                             <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="profile-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="PROFILE" data-popover-content="#popover-profile" data-html="true">
 {#                                <i class="fa-solid fa-magnifying-glass" style="font-size: 1.5vw; color: white;"></i>#}
@@ -62,11 +66,6 @@
                         <li class="nav-item">
                             <a class="nav-link active ms-md-3 me-md-3" aria-current="page" id="notification-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="NOTIFICATIONS" data-popover-content="#popover-notification" data-html="true">
                                 <i class="fa-regular fa-bell" style="font-size: 1.5vw; color: white;"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="shopping-cart-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="YOUR CART" data-popover-content="#popover-cart" data-html="true" data-bs-custom-class="custom-cart-popover">
-{#                                <i class="fa-solid fa-cart-shopping" style="font-size: 1.5vw; color: white;"></i>#}
                             </a>
                         </li>
 {#                        <li class="nav-item">#}
@@ -157,8 +156,10 @@
               PROFILE
             </div>
 
-            <div class="popover-body">
-                <a href="{% url 'logout' %}" class="text-style-ro-14 mt-3 text-center" style="color: #FD602C;">Log out</a>
+            <div class="popover-body d-flex justify-content-center">
+                <div class="d-flex justify-content-center align-items-center">
+                    <a href="{% url 'logout' %}" class="text-style-ro-14 my-2 text-center" style="color: #FD602C; text-decoration: none;">Log out</a>
+                </div>
 {#                <div class="ps-4">#}
 {#                    <a class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)" href="{% url 'logout' %}">LOGOUT</a>#}
 {#                    <button class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">SAVE</button>#}
@@ -214,23 +215,24 @@
 {#        </div>#}
 
         <div class="" style="min-height: 100%; display: flex; flex-direction: column;">
-            <div class="row" style="flex: 1; display: flex; width: 100%;">
+            <div class="row" style="flex: 1; display: flex;">
               <div id="side-navbar" style="padding-right: 0; width: 15%; position: fixed; top: 80px; left: 0; bottom: 0;  background-image: linear-gradient(to right, #ED1C24 , #F02825); box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2);">
-                <div style="padding-top: 200px;">
-                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/search/' %}active{% endif %}" href="{% url 'search' %}{% if request.session.search_params %}?{{ request.session.search_params|dict_to_query_string }}{% endif %}" style="color: white;">SEARCH</a>
-                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/library/' %}active{% endif %}" href="{% url 'library' %}" style="color: white;">LIBRARY</a>
-                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}" style="color: white;">DASHBOARD</a>
-                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/info/' %}active{% endif %}" href="{% url 'info' %}"  style="color: white;">INFO</a>
+                <div class="side-navbar-div">
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 {% if request.path == '/search/' %}active{% endif %}" href="{% url 'search' %}">SEARCH</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 {% if request.path == '/library/' %}active{% endif %}" href="{% url 'library' %}">LIBRARY</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}">DASHBOARD</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 {% if request.path == '/info/' %}active{% endif %}" href="{% url 'info' %}">INFO</a>
                 </div>
               </div>
-              <div class="offset-2 pl-0" style="width: 84%; flex-grow: 1;">
-                {% block body %}
-          
-                {% endblock %}
-              </div>
+              <div class="d-flex justify-content-center" style="margin-left: -0.5%; padding-right: 0;">
+                <div class="pl-0" style="margin-left: 15%; width: 85%; flex-grow: 1;">
+                    {% block body %}
             
+                    {% endblock %}
+                </div>
+              </div>
             </div>
-        <footer>
+        <footer id="footer">
             <nav class="navbar navbar-expand-lg navbar-custom" style="height: 70px !important; position: sticky;">
                 <div class="container-fluid px-5">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -313,6 +315,7 @@
                 });
             });
 
+            // For the top distance of our side navbar while scrolling
             window.addEventListener('scroll', function() {
                 var coloredDiv = document.getElementById('side-navbar');
                 var topNavbarHeight = 80;
