--- a/templates/commons/library.html
+++ b/templates/commons/library.html
@@ -26,8 +26,8 @@
 {% endblock %}
 
 {% block body %}
-<div id="library-body" class="d-flex align-items-center justify-content-center px-md-4">
-    <div class="col-lg-12 col-md-12">
+<div id="library-body" class="d-flex align-items-center justify-content-center">
+    <div class="col-lg-12 col-md-12 px-4">
         <div class="row">
             <div class="d-flex justify-content-between align-items-center mt-5">
                 <div>
@@ -69,7 +69,7 @@
         </div>
         {% for student in students %}
         <div class="all-data">
-            <div class="row mt-3" style="background-color: white; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1);">
+            <div class="row mt-3 student-data-div" style="background-color: white; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1); cursor: pointer;">
                 <div class="d-flex pt-2 pb-1 align-items-center">
                     <div class="col-2 text-center text-truncate text-style-ro-18b">{{ student.study }}</div>
                     <div class="col-3 text-center text-style-ro-18b pe-4">{{ student.specialisation }}</div>
@@ -268,8 +268,8 @@
     </div>
 </div>
 
-<div class="pop-up-box container-fluid justify-content-center">
-    <div class="overlay row d-flex"></div>
+<div class="pop-up-box container-fluid justify-content-center" style="padding: 0;">
+    <div class="overlay row d-flex" style="width: 100%; margin: 0;"></div>
     <div class="pop-up-body col-lg-9">
         <div class="pop-up-inner-body">
             <div class="row">
@@ -369,9 +369,9 @@
                     <div class="d-flex align-items-end">
                         <div class="col-4"></div>
                         <div class="col-5 ms-3">
-                            <div>
+                            <!-- <div>
                                 <a class="detailed-experience text-style-ro-16" style="color: #FF6B2C; font-weight: 700;">DETAILED EXPERIENCE AND COMPETENCES</a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-3 ms-2">
                             <div class="ps-4">
