--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -172,14 +172,14 @@
                 </div>
             </div> -->
             <div class="d-flex col-12 justify-content-end mt-5 px-5 mb-5 align-items-center">
-                <div class="col-2 text-center">
-                    <button id="search" class="orange-button text-style-ro-24b" style="font-weight: 400 !important; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">
+                <div class="d-flex justify-content-center align-items-center">
+                    <button id="search" class="d-flex align-items-center justify-content-center search-button orange-button text-style-ro-24b" style="font-weight: 400 !important;">
                         SEARCH
                     </button>
                 </div>
-                <div class="text-center">
+                <div class="d-flex justify-content-center align-items-center">
                     <button style="background-color: transparent; border: none; margin-left: -20px;">
-                        <i class="fa-solid fa-circle-chevron-right fa-3x" style="color: #FD602C; box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.25); border-radius: 50%; transform: translateY(2px);"></i>
+                        <i class="fa-solid fa-circle-chevron-right search-button-icon" style=""></i>
                     </button>
                 </div>
             </div>
@@ -272,7 +272,7 @@
         {% for student in students %}
         <div class="all-data">
             
-            <div class="row mt-3" style="background-color: white; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1);">
+            <div class="row mt-3 student-data-div" style="background-color: white; border-radius: 6px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.1), -2px 5px 5px -1px rgba(0, 0, 0, 0.1); cursor: pointer;">
                 <div class="d-flex pt-2 pb-1 align-items-center">
                     <div class="col-2 text-center text-truncate text-style-ro-18b">{{ student.study }}</div>
                     <div class="col-3 text-center text-style-ro-18b pe-4">{{ student.specialisation }}</div>
@@ -291,7 +291,7 @@
                         <span data-student-status-id="{{ student.id }}" class="ps-xl-4 ps-lg-3 ps-md-3">Bought</span>
                         {% endif %}
                         <button class="dropdown-button ps-xl-5 ps-lg-5 ps-md-4" style="border: none; background-color: transparent;">
-                            <i class="fa-solid fa-chevron-down dropdown-icon" style="color: #FD612C;"></i>
+                            <i class="dropdown-icon fa-solid fa-chevron-down" style="color: #FD612C;"></i>
                         </button>  
                     </div>
                 </div>
@@ -547,7 +547,7 @@
 
 
 <div class="pop-up-box container-fluid justify-content-center">
-    <div class="overlay row d-flex"></div>
+    <div class="overlay row d-flex" style="width: 100%; margin: 0;"></div>
     <div class="pop-up-body col-lg-9">
         <div class="pop-up-inner-body">
             <div class="row">
@@ -647,9 +647,9 @@
                     <div class="d-flex align-items-end">
                         <div class="col-4"></div>
                         <div class="col-5 ms-3">
-                            <div>
+                            <!-- <div>
                                 <a class="detailed-experience text-style-ro-16" style="color: #FF6B2C; font-weight: 700;">DETAILED EXPERIENCE AND COMPETENCES</a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-3 ms-5">
                             <div class="ps-4">
