--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -48,7 +48,7 @@
 {% endblock %}
 {% block body %}
 <div id="search-body" class="col-12 px-4 py-5 col container-fluid" style="width: 100%;">
-    <div class="light-pink-box" style="height: 100%;">
+    <div class="light-pink-box pb-2" style="height: 100%;">
         <div class="col">
             <div class="d-flex justify-content-between pt-5 col-12">
                 <div class="text-center col-4" style="">
