--- a/templates/commons/library.html
+++ b/templates/commons/library.html
@@ -80,9 +80,9 @@
                     </div>
                     <div class="col-2 d-flex justify-content-between text-center text-style-ro-18b">
                         {% if student.id in saved %}
-                        <span data-student-status-id="{{ student.id }}" class="ps-xl-5 ps-lg-3 ps-md-3">Saved</span>
+                        <span data-student-status-id="{{ student.id }}" class="ms-4 ps-5 ps-md-3">Saved</span>
                         {% else %}
-                        <span data-student-status-id="{{ student.id }}" class="ps-xl-4 ps-lg-3 ps-md-3">Connected</span>
+                        <span data-student-status-id="{{ student.id }}" class="ms-4 ps-5 ps-md-3">Connected</span>
                         {% endif %}
                         <button class="dropdown-button" style="padding-right: 0; border: none; background-color: transparent;">
                             <i class="fa-solid fa-chevron-down dropdown-icon" style="color: #FD612C;"></i>
