--- a/templates/commons/info.html
+++ b/templates/commons/info.html
@@ -261,9 +261,9 @@
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 6 -->
                     <div class="d-flex justify-content-center">
-                        <div class="col-10">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="{% static 'images/student_select.png' %}">
+                        <div class="col-10 info-search-6-div">
+                            <div class="position-relative" style="width: 100%;">
+                                <img class="img-fluid" src="{% static 'images/student_select.png' %}" style="width: 100%;">
                                 <div class="position-absolute select-student-image-div">
                                     <div class="text-style-ro-20b">SELECT A STUDENT</div>
                                     <div class="mt-2 text-style-ro-16">
