--- a/templates/commons/library.html
+++ b/templates/commons/library.html
@@ -26,10 +26,10 @@
 {% endblock %}
 
 {% block body %}
-<div id="library-body" class="d-flex align-items-center justify-content-center">
+<div id="library-body" class="d-flex align-items-center justify-content-center py-5">
     <div class="col-lg-12 col-md-12 px-4">
         <div class="row">
-            <div class="d-flex justify-content-between align-items-center mt-5">
+            <div class="d-flex justify-content-between align-items-center">
                 <div>
                     <div class="text-style-lato-24b d-flex px-3 py-2" style="background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); border-radius: 10px; color: white;">
                         <span id="saved-item">SAVED | {{ saved.count }}</span>
