--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -178,7 +178,7 @@
                     </button>
                 </div>
                 <div class="d-flex justify-content-center align-items-center">
-                    <button style="background-color: transparent; border: none; margin-left: -20px;">
+                    <button class="search-icon" style="background-color: transparent; border: none; margin-left: -20px;">
                         <i class="fa-solid fa-circle-chevron-right search-button-icon" style=""></i>
                     </button>
                 </div>
